--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,6 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>ui5 Tutorial</title>
+        <script
+            id="sap-ui-bootstrap"
+            src="resources/sap-ui-core.js"
+            data-sap-ui-theme="sap_horizon"
+            data-sap-ui-libs="sap.m"
+            data-sap-ui-compat-version="edge"
+            data-sap-ui-async="true"
+            data-sap-ui-on-init="module:ui5/tutorial/index"
+            data-sap-ui-resource-roots='{
+                "ui5.tutorial": "./"
+            }'>
+        </script>
     </head>
     <body>
         <div>Olá Camarada</div>
