--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,7 +16,6 @@
             }'>
         </script>
     </head>
-    <body>
-        <div>Olá Camarada</div>
+    <body class="sapUiBody" id="content">
     </body>
 </html>
