Step 10 - Descritor do App - MANIFEST.JSON

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,12 +10,13 @@
             data-sap-ui-libs="sap.m"
             data-sap-ui-compat-version="edge"
             data-sap-ui-async="true"
-            data-sap-ui-on-init="module:ui5/tutorial/index"
+            data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
             data-sap-ui-resource-roots='{
                 "ui5.tutorial": "./"
             }'>
         </script>
     </head>
     <body class="sapUiBody" id="content">
+        <div data-sap-ui-component data-name="ui5.tutorial" data-id="container" data-setting='{"id":"tutorial"}'></div>
     </body>
 </html>
